Feat: alter responses from handlers
